feat: Load menu data dynamically and ensure only one tab per menu
- down grade java version 17 -> 1.8